re-factor pin impact